--- a/translations/ru.json
+++ b/translations/ru.json
@@ -14,7 +14,7 @@
     "contact": "Контакты"
   },
   "hero": {
-    "title": "Добро пожаловать в Gold Saffron Bio",
+    "title": "Добро пожаловать в<br>Gold Saffron Bio",
     "subtitle": "VV Gold Saffron Bio"
   },
   "stats": {
@@ -154,6 +154,26 @@
     "title": "Свяжитесь с нами",
     "phone": "Телефон",
     "email": "Email"
+  },
+  "press": {
+    "bookmarkText": "Пресса",
+    "panelTitle": "Появления в прессе",
+    "close": "Закрыть",
+    "press1Title": "Статья в кулинарном журнале",
+    "press1Date": "Январь 2025",
+    "press1Source": "Премиальный кулинарный журнал",
+    "press1Desc": "VV Gold Saffron Bio был представлен в статье о премиальных специях и их использовании в современной кухне.",
+    "press1Link": "Читать статью",
+    "press2Title": "Интервью об органическом выращивании",
+    "press2Date": "Декабрь 2024",
+    "press2Source": "Журнал Агробизнес",
+    "press2Desc": "Эксклюзивное интервью с производителями о методах органического выращивания и европейской сертификации.",
+    "press2Link": "Читать интервью",
+    "press3Title": "Обзор премиального продукта",
+    "press3Date": "Ноябрь 2024",
+    "press3Source": "Food & Wine Review",
+    "press3Desc": "Подробный обзор качества и аромата премиального органического шафрана VV Gold.",
+    "press3Link": "Читать обзор"
   },
   "footer": {
     "description": "Производитель и поставщик премиального сертифицированного органического шафрана.",
